--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.CakeShop"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.ProductDetailActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +25,9 @@
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".AdminActivity"/>
         <activity android:name=".UserActivity"/>
+<!--        <activity android:name=".activity.ProductDetailActivity"/>-->
+
+
     </application>
 
 </manifest>
