--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--        <activity android:name=".MainActivity"/>-->
         <activity android:name=".LoginActivity"/>
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".UserActivity"/>
+        <activity android:name=".activity.ProductDetailActivity"/>
+        <activity android:name=".activity.CartActivity"/>
+
     </application>
 
 </manifest>
