--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.CakeShop"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.RevenueActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.BillActivity"
             android:exported="false" />
         <activity
